--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,43 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+/* Style des images */
+img {
+    max-width: 100%; /* Assurez-vous que les images ne dépassent pas la largeur de leur conteneur */
+    height: auto; /* Permet aux images de conserver leur ratio hauteur/largeur */
+    display: block; /* Élimine l'espace sous les images */
+    margin: 10px auto; /* Ajoute de la marge autour des images et les centre horizontalement */
+}
+
+/* Style spécifique pour certaines images */
+img[src="images/daramic.png"] {
+    max-width: 476px;
+    height: 106px;
+}
+
+img[src="images/merck.jpg"] {
+    max-width: 1280px;
+    height: 720px;
+}
+
+img[src="images/faurecia.png"] {
+    max-width: 900px;
+    height: 500px;
+}
+
+img[src="images/awalebiz.png"] {
+    max-width: 990px;
+    height: 750px;
+}
+
+img[src="images/tresor.png"] {
+    max-width: 400px;
+    height: 400px;
+}
+
+img[src="images/profil.jpg"] {
+    max-width: 4000px;
+    height: auto; /* Ajustez la hauteur en fonction de la largeur */
+}
+
